fullSandbox11072023/force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Related RSS Feeds</relationshipLabel>
    <relationshipName>RSS_Feed_Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>