fullSandbox11072023/force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related RSS Feeds</relationshipLabel>
    <relationshipName>RSS_Feed_Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>