fullSandbox11072023/force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <formula>IF( NOT(OR( Account__c  = &apos;&apos;, ISNULL(Account__c))) , &apos;Account&apos;, 
 IF( NOT(OR(  Campaign__c = &apos;&apos;, ISNULL(Campaign__c))) , &apos;Campaign&apos;, 
 IF( NOT(OR(   Contact__c = &apos;&apos;, ISNULL(Contact__c ))) , &apos;Contact&apos;, 
 IF( NOT(OR(    Opportunity__c = &apos;&apos;, ISNULL(Opportunity__c ))) , &apos;Opportunity&apos;, 
Contact__c ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Type</label>
    <type>Text</type>
</CustomField>